2006-12-28  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (process_operands): Check i.reg_operands
	and increment i.operands when adding a register operand.
	(build_modrm_byte): Fix 4 operand instruction handling.

2006-12-27  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (disp_expressions): Use MAX_MEMORY_OPERANDS
	for array size instead of 2.
	(im_expressions): Use MAX_IMMEDIATE_OPERANDS for for array size
	instead of 2.
	(i386_immediate): Update immediate operand overflow error
	message.
	(i386_displacement): Check displacement operand overflow.

2006-12-27  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c: Document tc-i386.c, not i386.c.

2006-12-27  Kazu Hirata  <kazu@codesourcery.com>

	* config/m68k-parse.h (m68k_register): Add CAC and MBB.
	* config/tc-m68k.c (fido_ctrl): New.
	(m68k_archs): Use fido_ctrl for -mfidoa.
	(m68k_cpus): Use fido_ctrl on fido-*-*.
	(m68k_ip): Add support for CAC and MBB.
	(init_table): Add CAC and MBB.

2006-12-26  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (i386_immediate): Remove prototype.

2006-12-25  Kazu Hirata  <kazu@codesourcery.com>

	* config/tc-m68k.c (cpu_of_arch): Add fido.
	(m68k_archs, m68k_cpu): Add entries for fido.
	(m68k_elf_final_processing): Handle EF_M68K_CPU32_FIDO_A.

2006-12-25  Mei Ligang  <ligang@sunnorth.com.cn>

	* config/tc-score.c (build_lw_pic): Rename as build_lwst_pic.
	Delete the code handling large constant for PIC.
	Modify some comments.
	(score_relax_frag): Decrease insn_addr in certain situation.
	(s_score_cprestore): Change .cprestore syntax from ".cprestore offset" 
	to ".cprestore reg, offset".
	
2006-12-23  Kazu Hirata  <kazu@codesourcery.com>

	* configure.tgt: Recognize fido.

2006-12-15  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c: Add a blank line bewteen function bodies.

2006-12-15  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (build_modrm_byte): Reformat to 72 columns.

2006-12-14  Daniel Jacobowitz  <dan@codesourcery.com>
