@@ -1,3 +1,8 @@
+2006-12-29  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* config/tc-i386.c (build_modrm_byte): Handle shift count
+	register with 3 operands.
+
 2006-12-28  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* config/tc-i386.c (process_operands): Check i.reg_operands
